app - loading hardcoded rss feed urls and displaying them by rss channel; displaying rss items inside rss channel; opening rss item details in device browser

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -3,9 +3,9 @@
 
     <item
         android:id="@+id/feed"
-        android:contentDescription="@string/title_feed"
+        android:contentDescription="@string/title_rss_feed"
         android:icon="@drawable/ic_rss_feed"
-        android:title="@string/title_feed" />
+        android:title="@string/title_rss_feed" />
 
     <item
         android:id="@+id/favorites"
