channels - added swipe to remove with undo feature; fixed displaying channel description when it's html content; added max lines to description; added fab for adding new channels

--- a/app/src/main/res/layout/item_rss_item.xml
+++ b/app/src/main/res/layout/item_rss_item.xml
@@ -5,6 +5,7 @@
     android:id="@+id/parentLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/ripple_list_item"
     android:padding="8dp"
     tools:ignore="HardcodedText">
 
@@ -28,6 +29,8 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="3"
             tools:text="Description" />
 
         <TextView
