--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_color">@color/purple_500</color>
+    <color name="delete_color">#FFD11A2A</color>
+    <color name="rss_feed_color">#EE802F</color>
 </resources>
