--- a/app/src/main/res/layout/fragment_stories.xml
+++ b/app/src/main/res/layout/fragment_stories.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="5"
-        tools:listitem="@layout/item_rss_item" />
+        tools:listitem="@layout/item_story" />
 
     <com.katic.rssfeedapp.ui.common.BlockingProgress
         android:id="@+id/progressBar"
