app - created refresh feed worker to periodically update feeds; added settings screen for configuring and disabling refresh feed worker; showing notification after refreshing feed if there are unread notifications

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,4 +7,14 @@
     <include app:graph="@navigation/feed" />
     <include app:graph="@navigation/favorites" />
 
+    <!--Settings fragment-->
+    <activity
+        android:id="@+id/settingsActivity"
+        android:name="com.katic.rssfeedapp.ui.settings.SettingsActivity" />
+
+    <!--Global action-->
+    <action
+        android:id="@+id/open_settings_activity"
+        app:destination="@id/settingsActivity" />
+
 </navigation>
